; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_adv7393.c_adv7393_s_std_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_adv7393.c_adv7393_s_std_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.adv7393_state = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*, i64)* @adv7393_s_std_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adv7393_s_std_output(%struct.v4l2_subdev* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.v4l2_subdev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.adv7393_state*, align 8
  %7 = alloca i32, align 4
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %4, align 8
  %9 = call %struct.adv7393_state* @to_state(%struct.v4l2_subdev* %8)
  store %struct.adv7393_state* %9, %struct.adv7393_state** %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load %struct.adv7393_state*, %struct.adv7393_state** %6, align 8
  %11 = getelementptr inbounds %struct.adv7393_state, %struct.adv7393_state* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

16:                                               ; preds = %2
  %17 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @adv7393_setstd(%struct.v4l2_subdev* %17, i64 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %16
  %23 = load i64, i64* %5, align 8
  %24 = load %struct.adv7393_state*, %struct.adv7393_state** %6, align 8
  %25 = getelementptr inbounds %struct.adv7393_state, %struct.adv7393_state* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  br label %26

26:                                               ; preds = %22, %16
  %27 = load i32, i32* %7, align 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %26, %15
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.adv7393_state* @to_state(%struct.v4l2_subdev*) #1

declare dso_local i32 @adv7393_setstd(%struct.v4l2_subdev*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
